tests/typing/good/testfile-underscore-4.go
package main

func main() { var _ int }
