tests/typing/bad/testfile-return-5.go
package main

func f(x int) int { for x > 0 { return 1 } }
func main() { }
